# i24_sysctl

./: README.md  setup.cfg
config/: ClusterControl.config
config/jobs/: test.jpl
config/servers/: lambda_cerulean.json  laptop.srv
src/: ClusterControl.py  ServerControl.py  ServerControlStub.py  __init__.py  control.py  server_control.py
src/i24_sys/: ClusterControl.py  __init__.py  cluster_control.py  process_template1.py  server_control.py
src/i24_sysctl/: cluster_control.py  process_template2.py  server_control.py
test/: i24_sysctl  process_test.py
test/simple/: simple.py  simple_process.py
