[metadata]
name = i24_sysctl
version = 0.1
author = Derek Gloudemans
author_email = derek.gloudemans@vanderbilt.edu
description = Control of processes on multiple machines within a cluster from a single machine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DerekGloudemans/i24_sysctl

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src
